gtbank login recreation task

--- a/gtbankRecreateTask/gtb_loginRecreate_task.html
+++ b/gtbankRecreateTask/gtb_loginRecreate_task.html
@@ -126,10 +126,7 @@
         <!-- Footer Section -->
 
         <div class="footer">
-            <a id="gtb_com" href=""> GTBANK.COM </a>
-            <a id="privacy_poicy" href="">| PRIVACY POLICY </a>
-            <a id="terms_conditions" href="">| TERMS & CONDITIONS </a>
-            <a id="whistle_blower" href="">| WHISTLE BLOWER </a>
+            <a id="gtb_com" href="">GTBANK.COM</a> | <a id="privacy_poicy" href="">PRIVACY POLICY</a> | <a id="terms_conditions" href="">TERMS & CONDITIONS</a> | <a id="whistle_blower" href="">WHISTLE BLOWER </a>
         </div>
 
     </div>
