gtbank login recreation task

--- a/gtbankRecreateTask/gtb_loginRecreate_task.html
+++ b/gtbankRecreateTask/gtb_loginRecreate_task.html
@@ -33,23 +33,23 @@
 			            <label class="colorID" for="userId"><span>UserId: </span><input type="text" name="userId" id="userId"></label>
 			            <label class="colorID" for="pass1"><span>Password: </span><input type="password" name="pass1" id="pass1"></label>
 			            <div class="gridHolder">
-				            <div class="gridChild child3">3</div>
-				            <div class="gridChild child7">7</div>
-				            <div class="gridChild child0">0</div>
-				            <div class="gridChild childClr">CLR</div>
-				            <div class="gridChild childSpan">Login</div>
-				            <div class="gridChild child1">1</div>
-				            <div class="gridChild child5">5</div>
-				            <div class="gridChild child8">8</div>
-				            <div class="gridChild childDel">DEL</div>
-				            <div class="gridChild child6">6</div>
-				            <div class="gridChild child4">4</div>
-				            <div class="gridChild child9">9</div>
-				            <div class="gridChild child2">2</div>
+				            <button class="gridChild child3">3</button>
+				            <button class="gridChild child7">7</button>
+				            <button class="gridChild child0">0</button>
+				            <button class="gridChild childClr">CLR</button>
+				            <button class="gridChild childSpan">Login</button>
+				            <button class="gridChild child1">1</button>
+				            <button class="gridChild child5">5</button>
+				            <button class="gridChild child8">8</button>
+				            <button class="gridChild childDel">DEL</button>
+				            <button class="gridChild child6">6</button>
+				            <button class="gridChild child4">4</button>
+				            <button class="gridChild child9">9</button>
+				            <button class="gridChild child2">2</button>
 			            </div>
 			        <a href="">Forgot your password/UserID?</a>
 			        <a href="">Forgot your secret question?</a>
-			        <input type="image" src="gtImages/Register2.png" alt="Register"><br>
+			        <a href="/register.html"><img src="gtImages/Register2.png" alt="Register"></a><br>
 			        <label class="checkboxRem"><input type="checkbox"><span>Remember My UserID</span></label>
 		            </form>
 	            </div>
